// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly the TodoForm component for adding a todo 1`] = `
<div>
  <form>
    <input
      placeholder="ex: Go for a run"
      type="text"
    />
    <button>
      Add todo
    </button>
  </form>
</div>
`;

exports[`Should render correctly the TodoForm component for editing a todo 1`] = `
<div>
  <form>
    <input
      type="text"
    />
    <button>
      Save
    </button>
  </form>
</div>
`;
